objects/ccpt__Card__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Card</relationshipLabel>
        <relationshipName>Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Board_Changed_Date__c</fullName>
        <label>Board Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccpt__Checklist__c</fullName>
        <label>Checklist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Column__c</fullName>
        <label>Column</label>
        <referenceTo>ccpt__Column__c</referenceTo>
        <relationshipLabel>Card</relationshipLabel>
        <relationshipName>Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpt__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Card</relationshipLabel>
        <relationshipName>Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpt__RelatedTo__c</fullName>
        <externalId>true</externalId>
        <label>System - Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt_ccpx__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Card</relationshipLabel>
        <relationshipName>Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt_rfx__Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Card</relationshipLabel>
        <relationshipName>Card</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt_rfx__Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Card</relationshipLabel>
        <relationshipName>Card</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>